client: bug fixes, checkbox reworked ## - For some reason all http requests stopped working, maybe it was some comma out of place in component declaration (...) - Checkbox 'checked' property doesnt allow to uncheck the current clicked checkbox. So the code below wont work: ```   checkboxChangeSelection(row: Student) {      if (!this.selection.isSelected(row) && this.selection.selected.length >= 4)      return; // --> NOPE! Checkbox still remain checked in the GUI      this.selection.toggle(row);    } ```

--- a/ai20-lab04/src/app/r2-inner-tab/student/teams/teams.component.css
+++ b/ai20-lab04/src/app/r2-inner-tab/student/teams/teams.component.css
@@ -15,3 +15,7 @@ mat-form-field {
 select, input, button {
   border-width: 0;
 }
+
+.mat-column-select {
+  overflow: initial;
+}
